# Merlin

./: .gitignore  README.md
graphs/: README.md  generate.py  instance.py  sampler.py
src/classical/: CMakeLists.txt  Makefile  arthur.cpp  certificate.cpp  certificate.hpp  greedy.cpp  greedy.hpp  instance.cpp  instance.hpp  local.cpp  local.hpp  types.hpp
